desaturated the yellow, not sure how i feel about it, and disabled horizontal scrolling. ALso fixed margin and padding issues here and there

--- a/simple_site/css/style.css
+++ b/simple_site/css/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 html {
     font-size: 50%;
 }
@@ -34,7 +39,7 @@ body {
     font-family: "Shrikhand", sans-serif;
     font-size: 3rem;
     letter-spacing: 1px;
-    text-shadow: .5rem .5rem #FFF200;
+    text-shadow: .5rem .5rem #FFDC2D;
     color: #242424;
     text-decoration: none;
 }
@@ -126,7 +131,7 @@ body {
     align-items: flex-end;
     width: 40vw;
     left: 50%;
-    margin-top: 20rem;
+    margin-top: 30rem;
 }
 
 .mail-icon {
@@ -202,12 +207,13 @@ body {
     }
 
     .single-leaf-container {
-        width: 38vw;
+        width: 40vw;
         top: 75rem;
     }
 
     .contact-info-container {
         margin-top: 40rem;
+        width: 46vw;
     }
 
     .footer {
@@ -220,5 +226,9 @@ body {
 
     .social-links img {
         width: 4rem;
+    }
+
+    .made-by {
+        padding-right: 3rem;
     }
 }
